fix hideen on iphone

--- a/src/app/pages/videoplayer/videoplayer-mobile.component.scss
+++ b/src/app/pages/videoplayer/videoplayer-mobile.component.scss
@@ -8,4 +8,9 @@
     display: grid !important;
   }
 
+  video {
+
+    z-index: 1;
+    }
+
 }
